fix overflow

--- a/app/assets/stylesheets/surety.less
+++ b/app/assets/stylesheets/surety.less
@@ -586,6 +586,7 @@ table.vtop {
 
 .log {
   max-height: 300px;
+  overflow: hidden;
 }
 .log code {
   white-space: pre;
